--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,11 +29,11 @@ body {
 
 @layer components {
   .noColor {
-    @apply py-2 px-5 bg-violet-500 text-white font-semibold rounded-full shadow-md hover:bg-violet-700 focus:outline-none focus:ring focus:ring-violet-400 focus:ring-opacity-75;
+    @apply bg-white border-b dark:bg-slate-600 dark:border-gray-700 dark:border-b-white
   }
 
   .noColorHighLight {
-
+    @apply bg-white border-b dark:bg-slate-400 dark:border-gray-700 hover:bg-blue-400
   }
 
   .colorsBuy {
