--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,11 +29,11 @@ body {
 
 @layer components {
   .noColor {
-    @apply bg-white border-b dark:bg-slate-600 dark:border-gray-700 dark:border-b-white
+    @apply bg-white border-b dark:bg-slate-500 dark:border-gray-700 dark:border-b-white
   }
 
   .noColorHighLight {
-    @apply bg-white border-b dark:bg-slate-400 dark:border-gray-700 hover:bg-blue-400
+    @apply bg-white border-b dark:bg-slate-500 dark:border-gray-700 dark:border-b-white hover:bg-blue-400
   }
 
   .colorsBuy {
@@ -82,5 +82,29 @@ body {
 
   .advancedColorsHighlightClose {
     @apply bg-white hover:bg-blue-400 border-b dark:bg-red-800 dark:border-gray-700
+  }
+
+  .tradeStatsNoColor {
+    @apply border-b border-slate-600
+  }
+
+  .tradeStatsNoColorHighlight {
+    @apply border-b border-slate-600 hover:bg-blue-400
+  }
+
+  .tradeStatsColorWin {
+    @apply bg-white border-b border-slate-600 dark:bg-lime-800 dark:border-gray-700
+  }
+
+  .tradeStatsColorWinHighlight {
+    @apply bg-white border-b hover:bg-blue-400 border-slate-600 dark:bg-lime-800 dark:border-gray-700
+  }
+
+  .tradeStatsColorLoss {
+    @apply bg-white border-b border-slate-600 dark:bg-red-800 dark:border-gray-700
+  }
+
+  .tradeStatsColorLossHighlight {
+    @apply bg-white border-b border-slate-600 dark:bg-red-800 dark:border-gray-700 hover:bg-blue-400
   }
 }
