--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -107,4 +107,20 @@ body {
   .tradeStatsColorLossHighlight {
     @apply bg-white border-b border-slate-600 dark:bg-red-800 dark:border-gray-700 hover:bg-blue-400
   }
+
+  .urgentTrade {
+    @apply bg-white border-b border-slate-600 dark:bg-green-700 dark:border-gray-700
+  }
+
+  .urgentTradeHighlight {
+    @apply bg-white border-b border-slate-600 dark:bg-red-800 dark:border-gray-700
+  }
+
+  .enteredTrade {
+    @apply bg-white border-b border-slate-600 dark:bg-blue-500 dark:border-gray-700 
+  }
+
+  .enteredTradeHighlight {
+    @apply bg-white border-b border-slate-600 dark:bg-red-800 dark:border-gray-700
+  }
 }
